@startuml

package filesystem {
    class File {
        - boolean writeable
        - int size
        - {static} int MAX_SIZE
        - {static} Extension EXTENSTION

        + File(Directory dir, String name, int size, boolean writeable, Extension type)
        + File(Directory dir, String name, Extension type)

        + boolean canHaveAsSize(int size)
        + void enlarge(int amountOfBits)
        + void shorten(int amountOfBits)
        + boolean isWriteable()

        + int getSize()
        + void setSize(int size)
        + void setWriteable(boolean writeable)
    }

    enum Extension {
        TXT
        PDF
        JAVA
    }

    class Link{
        + {static} Item linkedItem

        + Link(Directory dir, String name, Item linkedItem)
        + changeLink(Item linkedItem)
    }

    class Directory {
        - boolean writeable
        - List<Items> items

        + Directory(Directory dir, String name, boolean writable)
        + Directory(Directory dir, String name)
        + Directory(String name, boolean writeable)
        + Directory(String name)

        + boolean isWriteable()

        + int getNbItems()
        + Item getItemAt(int index)
        + Item getItem(String name)
        + boolean containsDiskWithName(String name)
        + int getIndexOf(Item item)
        + boolean hasAsItem(Item item)

        + void makeRoot()
    }

    abstract Item {
        + String name
        - Date creationTime
        - Date modificationTime

        + String getName()
        - void setName(String name)
        + void changeName(String newName)
        + void terminate()
        + Date getCreationTime()
        + Date getModificationTime()
        - void setModificationTime(Date modificationTime)
        + boolean hasOverlappingUsagePeriod(File other)

        + void move(Directory dir)
        + Directory getRoot()
        + boolean isDirectOrIndirectChildOf(Directory dir)
        + int getTotalDiskUsage()
        + String getAbsolutePath()
        + void deleteRecursive()
    }
}

'Inheritance
Item <|-- File : inherits from
Item <|-- Directory : inherits from
Item <|-- Link : inherits from

'Unidirectional
Link --> Directory
Link -->  File
Extension -o File: uses

'Bidirectional
Item -- Directory : contains

@enduml